--- a/demand-surge/demand-surge-notebook-using-SDK.ipynb
+++ b/demand-surge/demand-surge-notebook-using-SDK.ipynb
@@ -254,7 +254,7 @@
     "place_id = 2643743\n",
     "\n",
     "if LOCATION_SETTING == \"place_id\":\n",
-    "    location = phq.places.search(id=2643743).results[0].location\n",
+    "    location = phq.places.search(id=place_id).results[0].location\n",
     "    latitude = location[1]\n",
     "    longitude = location[0]"
    ]
@@ -722,15 +722,15 @@
     "    \"\"\"Identify presence of outliers based on distribution\"\"\"\n",
     "    surge_category = []\n",
     "    distn_stats = get_distn_stats(df, col)\n",
+    "    outlier_dates_category = pd.DataFrame(columns=['outlier_dates', 'surge_category'])\n",
     "    if check_distn_tail(df, col):\n",
-    "            tmp = df.copy()\n",
-    "            tmp[\"outlier\"] = np.where(\n",
+    "        tmp = df.copy()\n",
+    "        tmp[\"outlier\"] = np.where(\n",
     "                tmp[col] > (distn_stats[\"std\"] * 3 + distn_stats[\"m\"]),\n",
     "                True,\n",
     "                False,\n",
     "            )\n",
-    "    tmp = tmp.loc[tmp[\"outlier\"] == True]\n",
-    "    if pd.Series(tmp[\"outlier\"]).all():\n",
+    "        tmp = tmp.loc[tmp[\"outlier\"] == True]\n",
     "        for attend_sum in tmp[col]:\n",
     "            no_std_from_mean = (attend_sum - distn_stats[\"m\"])/distn_stats['std'] \n",
     "            if math.floor(no_std_from_mean) == 3:\n",
@@ -739,11 +739,9 @@
     "                surge_category.append('Large Surge')\n",
     "            else:\n",
     "                surge_category.append('Very Large Surge')\n",
-    "    tmp['surge_category'] = surge_category\n",
-    "    outlier_dates_category = pd.DataFrame(\n",
-    "            {'outlier_dates': tmp.index.to_list(),\n",
-    "             'surge_category': surge_category\n",
-    "            })\n",
+    "        tmp['surge_category'] = surge_category\n",
+    "        outlier_dates_category['outlier_dates'] = tmp.index.to_list()\n",
+    "        outlier_dates_category['surge_category'] = surge_category\n",
     "    return outlier_dates_category"
    ]
   },
